<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <ImageView
                android:id="@+id/tv_login_label"
                style="@style/Login.Label"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_login_username"
            style="@style/Login.EditText"
            android:hint="@string/login_user_hint"
            android:layout_marginTop="100dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/tv_login_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/Login.EditText"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@id/et_login_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <Button
            android:id="@+id/bt_login"
            android:text="@string/login_button_text"
            style="@style/Login.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.CoordinatorLayout
            android:id="@+id/cl_progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progressBarBackground"
            android:visibility="gone"
    >

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>