...
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                             android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/tv_home_name"
                            style="@style/Home.AccountTextView"
                            tools:text="Jose da Silva Teste"
                            android:text="@{userAccountData.name}"
                            android:layout_marginTop="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
...
